--- a/content/settings.json
+++ b/content/settings.json
@@ -1,23 +1,23 @@
 {
-  "store_id": 1031,
-  "name": "dtnetwork",
   "domain": "dtnetwork.netlify.app",
-  "short_name": "dtnetwork",
-  "description": "dtnetwork",
+  "currency_symbol": "R$",
   "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
   "theme": {
     "bootswatch": "_",
-    "custom": "_"
+    "custom": "clean-gray"
   },
+  "bg_color": "#ffffff",
   "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "name": "dtnetwork",
+  "short_name": "dtnetwork",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR"
+  "mini_logo": "",
+  "favicon": "/img/uploads/favicon.png",
+  "country_code": "BR",
+  "secondary_color": "#393e46",
+  "icon": "/img/icon.png",
+  "store_id": 1031,
+  "description": "dtnetwork",
+  "large_icon": "/img/large-icon.png"
 }
