--- a/content/settings.json
+++ b/content/settings.json
@@ -4,7 +4,7 @@
   "primary_color": "#222831",
   "theme": {
     "bootswatch": "_",
-    "custom": "clean-gray"
+    "custom": "niche-baby"
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/logo.png",
