--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "dtnetwork.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#222831",
+  "primary_color": "#ed4700",
   "theme": {
     "bootswatch": "_",
     "custom": "niche-baby"
